--- a/index.html
+++ b/index.html
@@ -39,13 +39,13 @@
                     <div class="skill-row">
                         <img class="skill-3" src="writing.png" alt="skill-3">
                         <h3>Writing</h3>
-                        <p>I am a great writter with great handwriting I have good spelling technique</p>
+                        <p>I am a at writter with great handwriting I have good spelling technique</p>
                     </div>
                 </div>
                     <hr>
                     <div class="contact-me">
                     <h2 class="touch">Get In Touch With Me</h2>
-                    <h3>Feel free to contact me!!!</h3>
+                    <h3>Feel free contact me!!!</h3>
                     <p>You can find me on.</p>
                 </div>
             </div>
